- MFH: Fix bug #46843 (CP936 euro symbol is not converted properly)

git-svn-id: http://svn.php.net/repository/php/php-src/php/php-src/branches/PHP_5_3@275016 c90b9560-bf6c-de11-be94-00142212c4b1